Display monitor results correctly on smaller screens

--- a/src/main/webapp/resources/css/style-medium.css
+++ b/src/main/webapp/resources/css/style-medium.css
@@ -130,3 +130,9 @@
 	#searchQueryForm textarea {
 		width: 100%;
 	}
+
+/* Monitor */
+
+	.monitor-result-image {
+		display: inherit;
+	}
